# advent-of-code

./: README.md
aoc2024/: .gitignore  Makefile  README.md  pyproject.toml
aoc2024/aoc2024/: __init__.py  day01.py  generate_readme.py  locations.py  setup_day.py  utils.py
aoc2024/python/aoc2024/: day02.py  day03.py  generate_readme.py  setup_day.py
aoc2025/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
aoc2025/data/timings/: timings.csv
aoc2025/python/aoc2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  generate_readme.py  grid.py  locations.py  setup_day.py  utils.py
aoc2025/rust/: Cargo.toml
aoc2025/rust/src/: day01.rs  input.rs  main.rs  paths.rs
template/: cookiecutter.json
template/{{cookiecutter.package_name}}/: Makefile  README.md  pyproject.toml
template/{{cookiecutter.package_name}}/python/{{cookiecutter.package_name}}/: __init__.py  generate_readme.py  setup_day.py  utils.py
