[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025 Solutions"
requires-python = ">= 3.13"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "z3-solver>=4.15.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["python/aoc2025"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.7",
    "ty>=0.0.8",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
# The default set of rules is "E4", "E7", "E9", "F"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8 comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings
docstring-code-format = true

# Set the line length limit used when formatting code snippets in docstrings
docstring-code-line-length = "dynamic"
